apply plugin: 'idea'
//and standard one
apply plugin: 'java'
apply plugin: 'application'

compileJava {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

repositories {
//    maven { url 'http://mvnrepository.com/maven2' }
//    maven { url 'https://repo1.maven.org/maven2' }
    mavenCentral()
}

dependencies {
	implementation  group: 'org.netbeans.api', name: 'org-openide-awt', version: 'RELEASE113'
//    compile group: 'org.jfree', name: 'jfreechart', version: '1.0.13'
	implementation  group: 'org.jfree', name: 'jfreechart', version: '1.0.14'
    runtimeOnly files ('lib/images.jar')
}

sourceSets {
    main {
        java {
            srcDirs 'src'
        }
        resources {
            srcDir 'src'
            include 'studio*.properties'
            include 'org/netbeans/editor/Bundle*.properties'
        }
    }
}

application {
    mainClassName = 'studio.core.Studio'
}
sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8
